<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_editar_personaje"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bemen3.albert.alcarol.EditarPersonajeActivity">

    <TextView
        android:id="@+id/tvTituloEditarPersonaje"
        android:text="@string/mi_personaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/etNombrePersonaje"
        android:layout_below="@id/tvTituloEditarPersonaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nombre_personaje"/>

    <ListView
        android:id="@+id/listviewAtributosPersonaje"
        android:layout_below="@id/etNombrePersonaje"
        android:layout_width="match_parent"
        android:scrollbarStyle="outsideOverlay"
        android:layout_height="100pt">

    </ListView>

    <Button
        android:id="@+id/btnGuardarPersonaje"
        android:layout_below="@id/listviewAtributosPersonaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar_estilo"
        android:onClick="guardarDatosPersonaje"/>

</RelativeLayout>
