<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_mis_estilos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.bemen3.albert.alcarol.MisEstilosActivity">

    <TextView
        android:id="@+id/titulo_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mis_estilos"
        android:layout_centerHorizontal="true"/>

    <ListView
        android:id="@+id/listviewEstilos"
        android:layout_width="wrap_content"
        android:layout_height="120pt"
        android:layout_below="@+id/titulo_activity"
        />

    <Button
        android:id="@+id/btnNuevoEstilo"
        android:layout_below="@id/listviewEstilos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nuevo_estilo"
        android:layout_centerHorizontal="true"
        android:onClick="crearNuevoEstilo"/>

    <Button
        android:id="@+id/btnMisGrupos"
        android:layout_below="@id/btnNuevoEstilo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mis_grupos"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>
